fix auth and add rating
